[🐛 Fix] Change z-index of header

--- a/sass/components/_header.sass
+++ b/sass/components/_header.sass
@@ -6,6 +6,8 @@ header
   justify-content: space-between
   padding: 30px 45px
   align-items: center
+  position: relative
+  z-index: 10
 
   *
     display: flex
